--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       subMaxLevel: 10,
       themeColor: '#1096EE',
       alias: {
-        '/.*/_sidebar.md': '/_sidebar.md',
+     //   '/.*/_sidebar.md': '/_sidebar.md',
       },
     }
   </script>
