--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 
   <script src="_assets/js/docsify.min.js"></script>
 
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-bash.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-go.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-python.min.js"></script>
   
 </body>
 
